--- a/src/App.css
+++ b/src/App.css
@@ -103,12 +103,14 @@
   -moz-osx-font-smoothing: grayscale;
   font-family: "Brevia", sans-serif;
 }
+
 .diff_div {
   margin: 0 14vw;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
+
 .diff_img {
   width: 100%;
 }
@@ -134,6 +136,7 @@ header {
     justify-content: space-between;
     letter-spacing: -0.4px;
   }
+
   .burger_btn {
     display: none;
   }
@@ -142,8 +145,6 @@ header {
     margin: 0 7vw;
     width: 10vw;
     position: relative;
-    left: 9.2px;
-    top: 2.6px;
   }
 
   a,
@@ -155,7 +156,7 @@ header {
     background: none;
     text-decoration: none;
     color: #707070;
-    font-weight: 500;
+    font-weight: 500;                   
     padding: 0;
     margin: 0;
     text-align: start;
@@ -168,16 +169,47 @@ header {
 }
 
 @media (max-width: 768px) {
+  main {
+    .banner {
+      width: 100%;
+      border-radius: 0;
+    }
+  }
+
   header {
-    .burger_btn {
-      display: block;
-      width: 3rem;
-      border: none;
-      background: none;
+    margin: 0 14vw;
+
+    .header_content {
+      align-items: center;
+      width: 100%;
+
+      .logo_link {
+        width: 20vw;
+
+        img {
+          left: 0;
+          top: 0;
+          width: 20vw;
+          margin: 0;
+        }
+      }
+
+      .burger_btn {
+        margin-right: 3vw;
+        padding: 2vw;
+        width: 10vw;
+
+        img {
+          width: 100%;
+        }
+      }
     }
 
-    .logo_btn {
-      width: 6rem;
+    .burger_btn {
+      display: block;
+      width: 1vw;
+      border: none;
+      background: none;
     }
 
     .header_link {
@@ -190,7 +222,7 @@ header {
   width: 57vw;
   height: 21.5vw;
   box-shadow: 0px 0px 7px #00000029;
-  border-radius: 24px;
+  border-radius: 25px;
   margin: .9vw 0 1.2vw 0;
 }
 
@@ -220,6 +252,7 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
+
   .articles_background {
     margin-bottom: 3.2vw;
     display: flex;
@@ -261,6 +294,7 @@ main {
       }
     }
   }
+
   .articles_container {
     padding: 4vw 0;
     margin: 3vw 0 0 0;
@@ -278,46 +312,47 @@ main {
       margin: 1vw .6vw;
       background-color: #fff;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-      border-radius: 20px;
+      border-radius: 1vw;
       width: 13vw;
       height: 19.1vw;
 
       video {
         box-sizing: border-box;
         width: 8vw;
-        height: 145px;
+        height: 10vw;
         object-fit: contain;
-        border-radius: 20px;
-        margin: .5vw 0 -.4vw 0;
       }
 
       h2 {
+        margin: -.5vw 0 0 0; 
         color: #ff55fb;
         font-size: 1vw;
       }
 
       p {
         font-size: .8vw;
-        margin: -.2vw 0;
-        overflow: clip;
+        overflow: hidden;
+        text-overflow: ellipsis;
         width: 11vw;
-        height: 4.5rem;
+        margin-bottom: 0;
       }
 
       a {
-        margin-top: 1vw;
+        margin: 1vw 0 1.3vw 0;
         img {
-          width: 2.6vw;
+          display: block;
+          height: 2.4vw;
+          width: 2.4vw;
         }
       }
     }
 
     article:hover {
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-      box-shadow: inset 0px 0px 0px 2px #ffe815;
+      box-shadow: inset 0px 0px 0px .1vw #ffe815;
     }
   }
-  
+
   .posts_container {
     display: flex;
     flex-direction: column;
@@ -333,11 +368,11 @@ main {
       font-family: "Brevia", sans-serif;
       color: #ff55fb;
       border: .35vw solid #ff55fb;
-      padding: 0.4rem 2.2rem;
+      padding: .3vw 1.8vw;
       text-align: center;
-      border-radius: 5rem;
+      border-radius: 3vw;
       font-size: 1.25vw;
-      letter-spacing: 0.8px;
+      letter-spacing: .1vw;
     }
 
     .posts {
@@ -355,18 +390,16 @@ main {
         align-items: center;
         text-align: start;
         box-sizing: border-box;
-        padding: 0 1rem;
-        margin: 1rem 0;
+        padding: 0 1vw;
+        margin: 1vw 0;
         background-color: #fff;
-        border-radius: 20px;
-        
+
         img {
           position: relative;
           width: 18vw;
           height: 18vw;
           box-sizing: border-box;
           object-fit: cover;
-          border-radius: 20px;
         }
 
         .post_text {
@@ -378,10 +411,9 @@ main {
           width: 16.5vw;
 
           h2 {
-            margin: 0.2rem 0 0 0;
+            margin: .3vw 0 0 0;
             font-size: 1.1vw;
             width: 110%;
-            top: 2px;
           }
 
           .pinkHeading {
@@ -419,14 +451,15 @@ main {
 
     article:nth-child(2),
     article:nth-child(5) {
-      border-left: 2px solid #91e52368;
-      border-right: 2px solid #91e52368;
+      border-left: .1vw solid #91e52368;
+      border-right: .1vw solid #91e52368;
       border-radius: 0;
     }
 
     .more_btn {
       width: 16vw;
       margin-top: 1vw;
+
       img {
         width: 16vw;
       }
@@ -446,8 +479,9 @@ main {
     a {
       position: relative;
       margin-top: 5vw;
-      right: 20px;
+      right: 3vw;
       width: 16vw;
+
       img {
         width: 16vw;
       }
@@ -459,7 +493,6 @@ main {
       align-items: center;
       justify-content: center;
       z-index: 0;
-      gap: calc(5rem + 10px);
 
       .video-wrapper {
         position: relative;
@@ -469,12 +502,12 @@ main {
       }
 
       .video_background {
-        border-radius: 10%;
+        border-radius: 2vw;
         position: absolute;
-        top: -19px;
-        left: 31px;
-        width: calc(42vw - 15px);
-        height: calc(24vw + 27px);
+        top: -1.2vw;
+        left: 1.6vw;
+        width: 40.7vw;
+        height: 26vw;
         transform: rotate(5deg);
         z-index: -1;
         background: #70e8ff;
@@ -483,16 +516,16 @@ main {
       img {
         position: relative;
         z-index: 0;
-        left: 18px;
-        top: 9px;
+        left: 1vw;
+        top: 0vw;
         width: 42vw;
         height: 24vw;
       }
 
       .play-button {
         position: absolute;
-        top: calc(50% - 0px);
-        left: calc(50% + 18px);
+        top: calc(50%);
+        left: calc(50% + 2vw);
         transform: translate(-50%, -50%);
         z-index: 1;
         width: 4.5vw;
@@ -500,46 +533,44 @@ main {
 
       .text_container {
         position: relative;
-        left: -45px;
-        top: 3px;
-        width: 20rem;
+        width: 17vw;
+        margin-left: 3vw;
 
         h2 {
           color: #ff55fb;
           font-weight: 800;
-          margin-bottom: 1rem;
+          margin-bottom: 3vw;
           font-size: 1.3vw;
         }
 
         p {
-          margin-top: 0.2rem;
           font-size: .9vw;
         }
       }
     }
+
     .video:nth-child(2) {
-      margin-top: 3.5vw;
+      margin-top: 5vw;
       flex-direction: row-reverse;
 
       .video_background {
         transform: rotate(-3deg);
-        top: -15px;
-        left: -5px;
+        top: -1vw;
+        left: -1.5vw;
       }
 
       img {
-        left: -18px;
+        left: -2vw;
       }
 
       .play-button {
-        left: calc(50% - 18px);
-        top: calc(50% + 4px);
+        left: calc(50% - 2vw);
+        top: calc(50% + 0vw);
       }
 
       .text_container {
-        left: 25px;
-        top: 15px;
-        width: 20rem;
+        margin-left: 0;
+        margin-right: 3vw;
       }
     }
   }
@@ -550,13 +581,12 @@ footer {
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
-  padding: 3rem 0 5rem 0;
+  padding: 2vw 0 5vw 0;
   margin: 0 14vw;
 
   .footer_container {
-    width: 50vw;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
   }
 
   .footer_content {
@@ -564,13 +594,15 @@ footer {
     display: flex;
     flex-direction: column;
   }
+  .footer_blocks {
+    display: flex;
+  }
 
   img {
     width: 20vw;
     height: 20vw;
     position: relative;
     top: -2vw;
-    /* left: -5rem; */
   }
 
   h1 {
@@ -585,11 +617,11 @@ footer {
     width: 40vw;
     font-weight: 400;
     font-size: .9vw;
-    margin: 0.7rem 0;
+    margin: 1vw 0;
   }
 
   .email_input {
-    margin-top: 0.7rem;
+    margin-top: 1vw;
     display: flex;
     align-items: center;
     gap: 2vw;
@@ -597,11 +629,11 @@ footer {
     input {
       width: 17vw;
       height: 2.5vw;
-      border: 3px solid #91e523;
-      border-radius: 40px;
+      border: .3vw solid #91e523;
+      border-radius: 2vw;
       font-size: 1vw;
       color: #707070;
-      padding: 0.2rem 1.5rem;
+      padding: .1vw 1vw;
     }
 
     button {
@@ -612,10 +644,9 @@ footer {
       width: 14vw;
       height: 3vw;
       border: none;
-      border-radius: 40px;
+      border-radius: 2vw;
       background-color: #91e523;
       color: #fff;
-      padding: 0.7rem 1.5rem;
       font-size: 1.2vw;
       font-weight: bold;
       box-shadow: 0 0 12px rgba(0, 0, 0, 0.3);
@@ -628,9 +659,9 @@ footer {
     align-items: center;
     position: relative;
     cursor: pointer;
-    padding-left: 2.5rem;
+    padding-left: 2vw;
 
-    
+
     label {
       font-size: .8vw;
     }
@@ -656,12 +687,12 @@ footer {
     }
 
     /* On mouse-over */
-    :hover input ~ .checkmark {
+    :hover input~.checkmark {
       background-color: #cccccc6c;
     }
 
     /* When the checkbox is checked */
-    input:checked ~ .checkmark {
+    input:checked~.checkmark {
       background-color: #91e523;
     }
 
@@ -673,7 +704,7 @@ footer {
     }
 
     /* When checked */
-    input:checked ~ .checkmark:after {
+    input:checked~.checkmark:after {
       display: block;
     }
 
@@ -692,8 +723,8 @@ footer {
   }
 
   .green_line {
-    width: 88%;
-    height: 2px;
+    /* width: 88%; */
+    height: .1vw;
     background-color: #91e523;
   }
 
